<package>
  <name>rviz_flag_plugin</name>
  <version>1.0.0</version>
  <description>
     Modify Tutorials of plugins for RViz.
  </description>
  <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>
  <license>BSD</license>

  <author>Haebum Jung</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
